--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/moimoi.html">Moimoi</a>
+        <ul>
+            <a href="recipes/moimoi.html">Moimoi</a>
+            <a href="recipes/eba.html">Eba</a>
+            <a href="recipes/akara.html">Akara</a>
+        </ul>
 </body>
 </html>
