--- a/recipes/akara.html
+++ b/recipes/akara.html
@@ -13,20 +13,18 @@
     <h3>Ingredients</h3>
         <ul>
             <li>Beans</li>
-            <li>Palm Oil</li>
+            <li>Vegetable Oil</li>
             <li>Spices</li>
-            <li>Boiled Eggs</li>
+            <li>Smoked Fish</li>
             <li>Vegetables</li>
-            <li>Leaves</li>
         </ul>
     <h3>Steps</h3>
         <ol>
             <li>Wash and blend the beans</li>
-            <li>Add the spices and palm oil</li>
+            <li>Add the spices and vegetable oil</li>
             <li>Mix properly</li>
-            <li>Add the boiled eggs and vegetables</li>
-            <li>Scoop in leaves and wrap properly</li>
-            <li>Carefully place in pot of water and boil</li>
+            <li>Add the smoked fish and vegetables</li>
+            <li>Scoop in hot oil to fry in batches</li>
         </ol>
     <p>
         This is a delicious dish popularly asscociated with the Yoruba tribe in Nigeria.
