HTML updated and Chef Image added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Some Nigerian Food Recipes!</h1>
+        <img src="recipes/chef.jpg" alt="A Female Nigerian Chef holding a plate of food">
         <ul>
-            <a href="recipes/moimoi.html">Moimoi</a>
-            <a href="recipes/eba.html">Eba</a>
-            <a href="recipes/akara.html">Akara</a>
+            <li><a href="recipes/moimoi.html">Moimoi</a></li>
+            <li><a href="recipes/eba.html">Eba</a></li>
+            <li><a href="recipes/akara.html">Akara</a></li>
         </ul>
 </body>
 </html>
