--- a/recipes/akara.html
+++ b/recipes/akara.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Akara</h1>
-    <img src="Akara-pic.jpg" alt="A plate of freshly fried Akara">
+    <img src="Akara-pic.jpeg" alt="A plate of freshly fried Akara">
     <h2>Description</h2>
     <h3>Ingredients</h3>
         <ul>
