--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Moimoi</title>
 </head>
 <body>
     <h1>Moimoi</h1>
-    <img src="cropped-moi-moi-rollup.jpg" alt="Moimoi roll-up with egg and vegetable filling">
+    <img src="cropped-moi-moi-rollup.jpg" alt="A plate of Moimoi roll-up with egg and vegetable filling">
     <h2>Description</h2>
     <h3>Ingredients</h3>
         <ul>
@@ -24,9 +24,9 @@
             <li>Wash and blend the beans</li>
             <li>Add the spices and palm oil</li>
             <li>Mix properly</li>
-            <li>Add the boiled eggs and vegetables </li>
+            <li>Add the boiled eggs and vegetables</li>
             <li>Scoop in leaves and wrap properly</li>
-            <li>Carefully place in pot of water and boil </li>
+            <li>Carefully place in pot of water and boil</li>
         </ol>
     <p>
         This is a delicious dish popularly asscociated with the Yoruba tribe in Nigeria.
