Body colour updated and main page footer added.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <h1>Some Nigerian Food Recipes!</h1>
+    <a href="#footer"><header id="header">Jump to Bottom</header></a>
         <img src="recipes/chef.jpg" alt="A Female Nigerian Chef holding a plate of food">
         <ul>
             <li><a href="recipes/moimoi.html">Moimoi</a></li>
             <li><a href="recipes/eba.html">Eba</a></li>
             <li><a href="recipes/akara.html">Akara</a></li>
         </ul>
+    <a href="#header"><footer id="footer">Back to Top</footer></a> 
+    <h1>Thank You!</h1>
 </body>
 </html>
