--- a/recipes/akara.html
+++ b/recipes/akara.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Akara</h1>
+    <a href="#footer"><header id="header">Jump to Bottom</header></a>
     <img src="Akara-pic.jpeg" alt="A plate of freshly fried Akara">
     <h2>Description</h2>
     <h3>Ingredients</h3>
@@ -30,5 +31,6 @@
     <p>
         This is a delicious dish popularly asscociated with the Yoruba tribe in Nigeria.
     </p>
+    <a href="#header"><footer id="footer">Back to Top</footer></a> 
 </body>
 </html>
