--- a/recipes/eba.html
+++ b/recipes/eba.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Eba</h1>
+    <a href="#footer"><header id="header">Jump to Bottom</header></a>
     <img src="eba-400x391.jpg" alt="A plate of Eba with Sea-food Okra">
     <h2>Description</h2>
     <h3>Ingredients</h3>
@@ -29,5 +30,6 @@
     <p>
         This is a delicious dish popularly asscociated with the Yoruba tribe in Nigeria.
     </p> 
+    <a href="#header"><footer id="footer">Back to Top</footer></a> 
 </body>
 </html>
