--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Moimoi</h1>
+    <a href="#footer"><header id="header">Jump to Bottom</header></a>
     <img src="cropped-moi-moi-rollup.jpg" alt="A plate of Moimoi roll-up with egg and vegetable filling">
     <h2>Description</h2>
     <h3>Ingredients</h3>
@@ -32,5 +33,6 @@
     <p>
         This is a delicious dish popularly asscociated with the Yoruba tribe in Nigeria.
     </p>
+    <a href="#header"><footer id="footer">Back to Top</footer></a> 
 </body>
 </html>
